2007-10-04  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/Network.h: add helper method
	for once off command/response actions, Network::write.

	* src/libYARP_OS/src/NameServer.cpp: start offering responses from
	the name server that are in standard (bottle) format.
	Historically, the name server has been using its own idiosyncratic
	protocols (since it was written before the rest of YARP existed).
	The low-level protocols were brought into line with standard yarp
	ports some time back, but the actual commands and responses
	continued to be defined in terms of strings rather than nested
	structures.  The new changes offer nested (bottle-compatible)
	structures as well.  To get the new responses, simply prefix
	commands with the word "bot".  This commit adds "bot list" and
	"bot query" commands with responses that are structured versions
	of the current "list" and "query" commands.

2007-09-25  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: froze YARP version 2.1.7

	* conf/YarpLibrary.cmake: insert SONAME versioning for shared
	libraries; this is provisional.  ABI stability will need some 
	planning.

	* src/libYARP_OS/include/yarp/os/BinPortable.h: automatic text
	mode convertion of compliant structures (see BinPortableTest.cpp)

	* src/libYARP_sig/include/yarp/sig/Image.h: added RGBA image
	class.

	* src/libYARP_OS/include/yarp/os/DummyConnector.h: added
	useful new class for testing Portable datatypes; patch number
	1798250 from Freyr Magnusson

	* conf/CMakeLists.txt: copy more configuration files to the
	"binary" directory, so that it becomes more independent.
	This is so users of YARP can just set the YARP_DIR directory
	and do not need to point to the full source with YARP_ROOT.
	YARP_DIR is understood automatically by CMake, wherease YARP_ROOT
	is not.

2007-09-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpdev/yarphear.cpp: yarphear can now save audio from