@@ -1,0 +1,10 @@
+
+This directory is NOT included in the main YARP build.
+
+It contains experimental code for creating a mapping from the
+YARP Network to a file system, using the super-cool FUSE library.
+
+The code is just a start, hardly anything is implemented yet.
+Stay away if you wish to preserve your sanity.
+
+  --paulfitz
